Se creó con Colab

--- a/TunningResNet.ipynb
+++ b/TunningResNet.ipynb
@@ -25,11 +25,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "4914342c"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4914342c",
+        "outputId": "5beedf01-7b6b-49bf-f640-5a22ecdf8cbc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Dataset descargado y descomprimido.\n"
+          ]
+        }
+      ],
       "source": [
         "import urllib.request\n",
         "import zipfile\n",
@@ -60,12 +72,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "e18d1bf7"
       },
       "outputs": [],
       "source": [
+        "import torch\n",
+        "\n",
         "from torchvision import transforms, datasets\n",
         "\n",
         "data_transforms = {\n",
